
* Added printWhenSkippingWords() so you can see when WordCram either
  thinks a Word will be too small to see, or can't find a place for
  it.

* Added registerSkippedWords() and getSkippedWords(), which make
  WordCram remember each skipped word, so it can provide an ArrayList
  of them after the sketch has run.

* Added withCustomCanvas(PGraphics), so a WordCram can be drawn to a
  PGraphics besides the sketch it's running in.

* Added withMaxAttemptsForPlacement(int), which tells WordCram to only
  try so many times to place a word.

* Deleted currentWord() and currentWordIndex(), which were deprecated.


Release notes for WordCram 0.3.1, 2010-11-10:

* Bug fix: in 0.3, the WordCram library folder under Processing was 
  renamed from wordcram to WordCram, but the .jar was still 
  wordcram.jar, so Processing didn't load it.  Renamed it to 
  WordCram.jar.


Release notes for WordCram 0.3, 2010-11-07:

* Added TextSource, so WordCram can count words from different kinds
  of source, including web pages and text files.
* Added a fluent API for building WordCrams: 
  new WordCram(this).forWebPage("{url}").sizedByWeight(10, 100).
* Added case-sensitive word counting, and the ability to exclude
  numeric words.
* Added javadoc comments for lots of classes -- more to come.
* Added Processing examples: in Processing, look under File >
  Sketchbook > libraries > WordCram > examples.
* Bug fix: issue 1, Stop-words with punctuation have no effect.
* Added StopWords.JAVA for making WordCrams from java source code.
* Added Anglers.heaped(), Anglers.randomBetween(min,max),
  Colorers.twoHuesRandomSatsOnWhite(), and
  Placers.horizBandAnchoredLeft().
* Deprecated old WordCram constructors, WordCram.currentWord(), and
  WordCram.currentWordIndex().
* Changed minimum shape size from 4 to 7, to speed up rendering.
* WaveWordPlacer and SwirlWordPlacer no longer randomly offset
  placement, so they should look crisper.